Support clear debug message.
Signed-off-by: ken-u <604498913@qq.com>

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
           <input type="text" id="wsMessageModal" class="editText">
           <br>
           <button onclick="sendMessage()" class="buttonConfirm">Debug</button>
-          <button onclick="closeWS()" class="buttonCancel">关闭</button>
+		  <button onclick="clearMessage()" class="buttonCancel">Clear</button>
+          <button onclick="closeWS()" class="buttonCancel">Close</button>
 		  <br>
 		  <!-- 显示Lanplay的输出 -->
 		  <div id="output"></div>
