--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../index.css">
 	<link rel="stylesheet" href="lanplay_server_mgr.css">
 	<link rel="stylesheet" href="setting.css">
-    <title>Slideout tests</title>
+    <title>LanPlay For TV</title>
   </head>
   <body>
 
