Sort source code.
Signed-off-by: ken-u <604498913@qq.com>

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="test.css">
-	<link rel="stylesheet" href="debug.css">
-	<link rel="stylesheet" href="lanplay_list.css">
-    <link rel="stylesheet" href="../index.css">
-	<link rel="stylesheet" href="lanplay_server_mgr.css">
-	<link rel="stylesheet" href="setting.css">
+    <link rel="stylesheet" href="css/test.css">
+	<link rel="stylesheet" href="css/debug.css">
+	<link rel="stylesheet" href="css/lanplay_list.css">
+    <link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/lanplay_server_mgr.css">
+	<link rel="stylesheet" href="css/setting.css">
     <title>LanPlay For TV</title>
   </head>
   <body>
@@ -109,12 +109,12 @@
         if (!expr) throw new Error(msg || 'failed');
       }
     </script>
-    <script src="../js/slideout.min.js"></script>
-    <script src="test.js"></script>
-	<script src="lanplay_list.js"></script>
-	<script src="lanplay_server_mgr.js"></script>
-	<script src="debug.js"></script>
-	<script src="setting.js"></script>
+    <script src="js/slideout.min.js"></script>
+    <script src="js/test.js"></script>
+	<script src="js/lanplay_list.js"></script>
+	<script src="js/lanplay_server_mgr.js"></script>
+	<script src="js/debug.js"></script>
+	<script src="js/setting.js"></script>
     <script>
       window.onload = function() {
         document.querySelector('.js-slideout-toggle').addEventListener('click', function() {
